# server_learning

./: .clang-format  CMakeLists.txt
doc/: Expected.md  命名约定.md
include/: Expected.h  IPAddress.h  IPAddressException.h  Preprocessor.h  Traits.hpp
include/io/IoUring/: IoUringBase.h
include/io/async/: AsyncBase.h
include/log/: LogLevel.h  Logger.h
include/net/: Basic_endpoint.h  IPAddress.h  IPAddressException.h  IPAddressV4.h  IPAddressV6.h  IPAddress_detail.h  Net_type.hpp  NetworkSocket.h  Network_v4.h  Tcp.h  Udp.h
include/net/detail/: Endpoint.h  SocketFileDescriptorMap.h
include/net/detail/impl/: Endpoint_impl.hpp
include/net/impl/: Basic_endpoint_impl.hpp  IPAddressV4_impl.hpp  IPAddressV6_impl.hpp  IPAddress_impl.hpp
include/util/: Bad_expected_access.hpp  Exception.h  ExceptionWrapper.h  Expected.h  Expected.hpp  Expected_Tiny.hpp  Expected_folly.h  Expected_folly.hpp  File.h  FileUtil.h  Preprocessor.h  Traits.hpp  Unexpected.hpp  Unit.hpp  UnlockMutex.hpp  Utility.h  Utility.hpp
include/util/detail/: FileUtilDetail.h
include/version_control/: Version_control.hpp
src/: CMakeLists.txt
src/io/async/: AsyncBase.cc
src/log/: CMakeLists.txt  Log.h  LogLevel.cc
src/net/: CMakeLists.txt  IPAddress.cc  IPAddressV4.cc  IPAddressV6.cc  IPAddress_detail.cc
src/util/: CMakeLists.txt  Exception.cc  File.cc  File.cpp  FileUtil.cc
src/util/Detail/: FileUtilDetail.cc
test/: CMakeLists.txt  test.cc
